Adds styles of generic grid-like list + component with areas within the list. Improves performance, colours, code documentation.

--- a/components/_components.base.scss
+++ b/components/_components.base.scss
@@ -11,3 +11,4 @@
 @import '_components.navigation.scss';
 @import '_components.tooltips.scss';
 @import '_components.layout.scss';
+@import '_components.lists.scss';
