--- a/components/_components.layout.scss
+++ b/components/_components.layout.scss
@@ -3,7 +3,7 @@
 ==============================*/
 
 
-/* ===== RESPONSIVE SIZE WRAPPERS =========================================== */
+/* ===== RESPONSIVE VIEW WRAPPERS =========================================== */
 
 .view-large  {
     font-size: em( 20px );
