--- a/objects/_objects.typography.scss
+++ b/objects/_objects.typography.scss
@@ -26,3 +26,8 @@
         }
     }
 }
+
+
+/* ===== GENERIC HELPERS ==================================================== */
+
+.centered { text-align: center; }
