--- a/settings/_settings.colours.scss
+++ b/settings/_settings.colours.scss
@@ -30,6 +30,7 @@ $grey-mercury:          #e8e8e8;
 $grey-stack:            #808080;
 $grey-tower:            #A7BBC1;
 $grey-alto:             #DDD;
+$grey-silver:           #CCC;
 
 $green-river-bed:       #43575c;
 $green-fern:            #63B960;
