[FIX] Adds transition state to caret icon. Improves responsiveness of banner's background image.

--- a/base/_base.typography.scss
+++ b/base/_base.typography.scss
@@ -65,11 +65,13 @@ p {
 
 a {
     color: $link-colour;
-    @include transitionise();
 
     @include hoverify { text-decoration: none; }
 }
 
+a, a > *:before, a > *:after  {
+    @include transitionise();
+}
 
 /* Lists */
 ul, ol {
