--- a/components/_components.lists.scss
+++ b/components/_components.lists.scss
@@ -8,7 +8,7 @@
 
 $grid-area-margin:              .15em !default;
 
-$grid-area-title-colour:        $green-river-bed !default;
+$grid-area-title-colour:        $green-mako !default;
 $grid-area-title-caret-colour:  #AAA !default;
 $grid-area-title-height:        3.3em !default;
 $grid-area-hover-title-colour:  $white !default;
