--- a/settings/_settings.colours.scss
+++ b/settings/_settings.colours.scss
@@ -32,8 +32,8 @@ $grey-tower:            #A7BBC1;
 $grey-alto:             #DDD;
 $grey-silver:           #CCC;
 
-$green-river-bed:       #43575c;
 $green-fern:            #63B960;
+$green-mako:            #475153;
 
 $blue-curious:          #1483EB;
 $blue-picton:           #3C90E6;
