--- a/components/_components.banners.scss
+++ b/components/_components.banners.scss
@@ -4,22 +4,19 @@
 
 
 /* Banner with background cover */
+$banner-cover-max-width:    1200px;
+$banner-cover-text-colour:  $white;
+
 .banner-with-cover {
     position: relative;
     overflow: hidden;
     height: auto;
 
     .cover-overlay {
-        @include linear-gradient( transparent 0%, transparent 40%, rgba( #171917, .8 ) 100% ); // TODO: Improve using non-linear functino @include linear-gradient(50deg, #1e5799 0%, #2989d8 50%, #207cca 51%, #7db9e8 100%);
-    }
-
-    .cover-overlay {
         @include position( absolute, 0 0 0 0 );
-        width: 100%;
-        height: 100%;
-    }
+        @include size( 100% 100% );
+        @include linear-gradient( transparent 0%, transparent 40%, rgba( #171917, .8 ) 100% ); // TODO: Improve using non-linear functino @include linear-gradient(50deg, #1e5799 0%, #2989d8 50%, #207cca 51%, #7db9e8 100%);
 
-    .cover-overlay {
     }
 
     .cover-holder {
@@ -29,84 +26,37 @@
     }
 
         .cover-pic {
-            height: auto;
-            width: 100%;
             @include position( absolute, 0 0 0 0);
+            min-height: 100%;
+            min-width: $banner-cover-max-width;
+            @include size( 100% );
 
-
+            // Specific to this particular image and its width.
+            @media screen and ( max-width: $banner-cover-max-width ) {
+                left: 50%;
+                margin-left: -$banner-cover-max-width / 2;
+            }
         }
 
     .intro {
         @include outer-container( 0.7 * $base-width-px );
+        @include position( relative );
         margin-top: 4.5em;
         margin-bottom: 2em;
         padding: 0 $base-padding;
-        color: $white;
-        position: relative;
+        color: $banner-cover-text-colour;
         text-align: center;
         z-index: $z-index-lower;
     }
 
     .title {
-        color: $white;
         display: inline-block;
-        background-color: $green-fern;
         padding: .35em 1.5em;
+        color: $banner-cover-text-colour;
+        background-color: $green-fern;
     }
 
-    .abstract {
-        font-size: 120%;
-    }
+    .abstract { font-size: 120%; }
 }
 
 
-
-.topic_banner {
-    max-height: 500px;
-    overflow: hidden;
-    position: relative;
-    .overlay {
-         background: rgba(0, 0, 0, 0.35);
-         // @include fill-parent();
-         @include position(absolute, 0 0 0 0);
-         overflow: hidden;
-         max-height: 500px;
-
-    }
-}
-
-.banner_text {
-    @include position( absolute, 20% null null null );
-    @include span-columns(6);
-    @include shift(3);
-}
-
-.banner_title {
-    text-align: center;
-    h1 {
-        background-color: $green-victoria-study;
-        color: $white;
-        font-size: 2em;
-        text-transform: capitalize;
-        display: inline-block;
-        @include pad(20px 30px);
-        @include margin(0 0 20px 0);
-        @include border-top-radius( $base-border-radius );
-        @include border-bottom-radius( $base-border-radius );
-    }
-}
-
-.banner_sub_title {
-    @include margin( 40px 0 0 0 );
-    border-top: 1px $white solid;
-    text-align: center;
-    h2 {
-
-        font-family: $base-font-family;
-        font-weight: lighter;
-        color: $white;
-        font-size: 1.5em;
-        line-height: 1.2;
-        @include pad(20px 0 0 0)
-    }
-}
