--- a/settings/_settings.global.scss
+++ b/settings/_settings.global.scss
@@ -32,7 +32,7 @@ $two-btn-layout:  .5 !default;
 
 // Typography
 $base-font-size:    em( $em-base, $em-browser-default ) !default;
-$base-font-colour:  $green-river-bed !default;
+$base-font-colour:  $green-mako !default;
 $base-line-height:  1.6 !default;
 $base-font-family:  'Helvetica Neue', 'Segoe WP', 'Nimbus Sans L', 'Helvetica', 'Arial' !default;
 $base-spacing:      $base-line-height * 1em !default;
@@ -64,7 +64,7 @@ $base-transition: all $base-transition-duration $base-transition-function !defau
 
 // Typography
 $caption-font-family:   '#{$font-oxygen}' !default;
-$caption-colour:        $green-river-bed;
+$caption-colour:        $green-mako;
 $caption-line-height:   1.35;
 
 $link-colour:           $blue-picton;
