[Hotfix] Improves font antialising in webkit browsers, fixes positioning of sticky panels.

--- a/base/_base.layout.scss
+++ b/base/_base.layout.scss
@@ -2,7 +2,14 @@
 =            LAYOUT             =
 ===============================*/
 
-html { font-size: inherit; }
+*, *::after, *::before {
+    box-sizing: border-box;
+}
+
+html {
+    font-size: inherit;
+    -webkit-font-smoothing: antialiased;
+}
 
 body {
     font-size: $base-font-size;
