--- a/settings/_settings.global.scss
+++ b/settings/_settings.global.scss
@@ -70,7 +70,8 @@ $caption-line-height:   1.35;
 $link-colour:           $blue-picton;
 
 // Layout & Grid
-$block-highlight:       $grey-mercury;
+$block-highlight-colour: $grey-mercury;
+$block-highlight-border: $grey-alto;
 
 // Borders & Lines
 $delim-border-colour:   $grey-mercury;
