Added: new blocks, tweak style to match existing

--- a/components/_components.base.scss
+++ b/components/_components.base.scss
@@ -12,3 +12,5 @@
 @import '_components.tooltips.scss';
 @import '_components.layout.scss';
 @import '_components.lists.scss';
+@import '_components.simple-blocks.scss';
+@import '_components.contact-block.scss';
