--- a/settings/_settings.colours.scss
+++ b/settings/_settings.colours.scss
@@ -16,20 +16,33 @@ $white: #FFF;
 $black: #000;
 
 
-/* ===== BRANDED ============================================================ */
+/* ===== BRANDED & ORIGINAL ============================================================ */
 
 $green-victoria:        #115737;
 $black-victoria:        #1d2624;
 $green-victoria-study:  #549349;
 
+//Buttons
+$blue-azure: 			#3468B0;
+//Hover button
+$blue-st-tropaz: 		#285189;
+
+//Link text
+$blue-endeavoura:       #005ea5;
+$blue-congress-blue:    #004f8c;
+$blue-lochmara:         #007BD8;
+
 
 /* ===== NAMED PALETTE ====================================================== */
 
-$grey-mercury:          #e8e8e8;
-$grey-stack:            #808080;
-$grey-tower:            #A7BBC1;
-$grey-alto:             #DDD;
-$grey-silver:           #CCC;
+$grey-gallery: 			#EEE; 		//old
+$grey-mercury:          #e8e8e8; 	//new
+$grey-stack:            #808080; 	//new
+$grey-tower:            #A7BBC1; 	//new
+$grey-alto:             #DDD; 		//old
+$grey-silver:           #CCC; 		//old
+$grey-dusty-gray:       #999; 		//new
+$grey-mine-shaft:       #333; 		//new
 
 $green-fern:            #63B960;
 $green-mako:            #475153;
@@ -44,19 +57,14 @@ $blue-picton:           #3C90E6;
 $text-fade-colour:      $grey-tower;
 
 
-/* ===== OUTDATED =========================================================== */
+/* ===== OLD =========================================================== */
 
-//TODO: REFACTOR & REMOVE!
-$blue-endeavoura:       #005ea5;
-$blue-congress-blue:    #004f8c;
-$blue-lochmara:         #007BD8;
 
 //TODO: REFACTOR & REMOVE!
 $vic-green:     $green-victoria;
 $vic-black:     $black-victoria;
 
-$grey-mine-shaft:       #333;
-$grey-dusty-gray:       #999;
+
 
 $green-finlandia:       #5F6B5F;
 
