--- a/components/_components.layout.scss
+++ b/components/_components.layout.scss
@@ -14,11 +14,16 @@
 
     @include media( $mobile-large ) {
         font-size: em( 16px );
+        //Add margin for stick nav bottom
+         margin-bottom: 60px;
     }
 
     @include media( $mobile ) {
         font-size: em( 15px );
+        //Add margin for stick nav bottom
+        margin-bottom: 80px;
     }
+
 }
 
 
