Added: more blocks; quote, image, plus tweaks

--- a/components/_components.base.scss
+++ b/components/_components.base.scss
@@ -14,3 +14,5 @@
 @import '_components.lists.scss';
 @import '_components.simple-blocks.scss';
 @import '_components.contact-block.scss';
+@import '_components.image-blocks.scss';
+@import '_components.quote-block.scss';
