--- a/components/_components.simple-blocks.scss
+++ b/components/_components.simple-blocks.scss
@@ -83,3 +83,26 @@ $nm-bg-color: $grey-alto;
     }    
 }
 
+/*===============================
+=      SUBJECT INTRO BLOCK      =
+===============================*/
+
+.intro-about-block {
+
+ 
+    .about-subjects-block {
+
+        h3 {
+            .tooltip-icon {
+                font-size: 100%;
+                color: $grey-dusty-gray;
+                margin-left: 0.2em;
+
+            }
+        }
+    }
+}
+
+
+
+
