--- a/objects/_objects.icons.scss
+++ b/objects/_objects.icons.scss
@@ -19,50 +19,38 @@ $ico-margin:    .9em;
 
 /* ===== FONT ICON'S CODES ================================================== */
 
-$ico-code-heart-thin:    '\e802';
-$ico-code-bubble-thin:   '\e804';
-$ico-code-study-cap-thin:'\e800';
+$ico-code-heart-thin:    '\e803';
+$ico-code-bubble-thin:   '\e805';
+$ico-code-study-cap-thin:'\e801';
 
-$ico-code-arr-right:    '\e801';
-$ico-code-arr-left:     '\e803';
-$ico-code-arr-down:     '\e805';
-$ico-code-arr-up:       '\e806';
+$ico-code-arr-right:    '\e802';
+$ico-code-arr-left:     '\e804';
+$ico-code-arr-down:     '\e806';
+$ico-code-arr-up:       '\e807';
 
-$ico-code-arr-short-down:   '\e807';
-$ico-code-arr-short-left:   '\e808';
-$ico-code-arr-short-right:  '\e809';
-$ico-code-arr-short-up:     '\e80a';
+$ico-code-arr-short-down:   '\e808';
+$ico-code-arr-short-left:   '\e809';
+$ico-code-arr-short-right:  '\e80a';
+$ico-code-arr-short-up:     '\e80b';
 
-$ico-code-tooltip-circle:   '\e80b';
+$ico-code-tooltip-circle:   '\e80c';
 
-$ico-code-quote-start:  '\e80c';
-$ico-code-quote-end:    '\e80d';
+$ico-code-quote-start:  '\e80d';
+$ico-code-quote-end:    '\e80e';
 
-$ico-code-phone:        '\e80e';
-$ico-code-envelope:     '\e80f';
+$ico-code-phone:        '\e80f';
+$ico-code-envelope:     '\e810';
+
+
+$ico-code-clock:             '\e800';
+$ico-code-dollar:            '\e811';
 
 
 /* ===== ICONS DEFINITIONS ================================================== */
 
-//why is this not spelt .icon? Not typing the 'n' is lazy - irwinna 1.3.16
+//why is this not spelt .icon? Not typing the 'n' is just lazy - irwinna 1.3.16
 .ico {
 
-//==============================================================================
-   // Moved this here so can @extend .ico on other element that arent a .btn 
-//===============================================================================
-
-    // Standard icon styles
-    margin-left: $ico-margin;
-    line-height: 0;
-    font-size: 120%;
-    vertical-align: middle;
-
-    // Positioning (right position by default)
-    &.left {
-        margin-left: 0;
-        margin-right: $ico-margin;
-    }
-//============================================ 
     &:before {
         @include iconify();
     }
@@ -79,8 +67,12 @@ $ico-code-envelope:     '\e80f';
     // Standard icons (general usage, eg. buttons, links, headers, one liners)
     @include define-icon( email, $ico-code-envelope );
     @include define-icon( phone, $ico-code-phone );
-
     @include define-icon( tooltip-icon, $ico-code-tooltip-circle );
+
+    @include define-icon( clock, $ico-code-clock );
+    @include define-icon( dollar, $ico-code-dollar );
+
+
     @include define-icon( quote-start, $ico-code-quote-start );
     @include define-icon( quote-end, $ico-code-quote-end );
 
